1991-04-16  dickey@software.org

	* src/version.h: absorb backslash in shell command only when "#" or "%"
	follows (briefer).

	* src/ded.c: suppress empty-strings from argument list

	* src/deddoit.c:
	absorb backslash only when it precedes "#" or "%", to make
	typing commands with backslashes simpler (though inconsistent).
	also, made the static buffers auto (cleaner code).

	* src/version.h:
	modified so that "-" argument causes DED to read a list of
	arguments from stdin (no wildcard expansion!)

	* src/ded.c: interpret "-" argument as read-from-standard-input

1991-04-04  dickey@software.org

	* src/version.h:
	mods to recover/proceed when 'chdir()' works but 'getwd()'
	does not (execute, but no read permission in path).

	* src/ded.c, src/dedscan.c, src/dedring.c:
	guard against 'getwd()' failure.

1991-04-01  dickey@software.org

	* src/version.h:
	added CTL/I (tab) subcommand to 't' (type) to alter tabs.

	* src/dedtype.c:
	added command (tab-character) to allow user to alter tab
	stops in the display.

1990-08-27  dickey@software.org

	* src/version.h: added better error recovery to ".ftree" read/write

	* src/ded.c:
	mods to make error-reporting routines work properly if they
	are called before screen is initialized, etc., to support mods
	to "ftree.c" for better error recovery.

	* src/ftree.c:
	modified 'ft_read()' and 'ft_write()' to try to recover from
	missing/corrupt ".ftree" file.

	* src/Makefile: really need to lint with apollo stuff, tho not portable

1990-08-27  ste_cm@software.org

	* src/Makefile: BASELINE Mon Jun 10 10:09:56 1991 -- apollo sr10.3

1990-08-13  dickey@software.org

	* src/dedscan.c: lint

1990-08-13  ste_cm@software.org

	* src/dedscan.c: BASELINE Mon Aug 13 15:06:41 1990 -- LINCNT, ADA_TRANS

1990-08-13  dickey@software.org

	* src/dedtype.c: lint

1990-08-13  ste_cm@software.org

	* src/dedtype.c: BASELINE Mon Aug 13 15:06:41 1990 -- LINCNT, ADA_TRANS

1990-07-27  dickey@software.org

	* src/dedscan.c: