@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19910416
+MANIFEST for ded, version t19910417
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 Makefile                        top-level makefile for unix directory editor
